--- a/about/leadership.html
+++ b/about/leadership.html
@@ -493,7 +493,7 @@
                   </div>
                   <div class="card-body">
                     <p>
-                      Diane Leonard is the Executive Assistant. Ms. Leonard began work in the in the Mayor's
+                      Diane Leonard is the Executive Assistant. Ms. Leonard began work in the Mayor's
                       Office in 1977 under Mayor Abraham Beame. She was assigned to work as an Office Aide for
                       the Midtown Enforcement Project, a federally funded program which focused on law
                       enforcement initiatives in the Times Square area of Manhattan. That project became the
