--- a/about/mission-and-vision.html
+++ b/about/mission-and-vision.html
@@ -198,7 +198,11 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
+                          <li>
+                            <a href="../illegal-short-term-rentals/quiz.html"
+                              >Quiz: Is Your Rental Legal?</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -423,43 +427,43 @@
 
           <div class="col-xl-8 overflow-hidden" id="primary-content">
             <div class="my-5">
-              <div class="narrow my-4">
+              <div class="narrow my-4" id="mission-and-vision">
                 <h2>Our Mission and Vision</h2>
                 <p>
                   The Mayor's Office of Special Enforcement (OSE) is an innovative, solutions-oriented task
                   force that ensures NYC communities are safe from harmful illegal and unregulated
                   industries that one agency and one set of enforcement tools alone can't address. Our
-                  multi-agency enforcement team devises strategic solutions-ranging from public education to
-                  enforcement action-to complex problems.
+                  multi-agency enforcement team devises strategic solutions to complex problems, ranging
+                  from public education to enforcement action.
                 </p>
                 <ul>
                   <li>
-                    <strong>Preserving Our Affordable Housing Stock</strong> - OSE ensures owners, property
-                    managers and tenants comply with City and State regulations designed to keep housing
-                    available and affordable for New Yorkers.
+                    <strong>Preserving Our Affordable Housing Stock</strong><br />OSE ensures owners,
+                    property managers and tenants comply with City and State regulations designed to keep
+                    housing available and affordable for New Yorkers.
                   </li>
                   <li>
-                    <strong>Educating New Yorkers on Legal Short-term Renting</strong> - Through community
-                    engagement and online resources, OSE provides information about how people can share
-                    their homes legally in a way that reflects New York values, ensuring fairness for
+                    <strong>Educating New Yorkers on Legal Short-term Renting</strong><br />Through
+                    community engagement and online resources, OSE provides information about how people can
+                    share their homes legally in a way that reflects New York values, ensuring fairness for
                     residents, visitors and workers.
                   </li>
                   <li>
-                    <strong>Promoting Safe and Sanitary Building Conditions</strong> - Illegal short-term
+                    <strong>Promoting Safe and Sanitary Building Conditions</strong><br />Illegal short-term
                     rentals and other illegal businesses are often not equipped to handle safety risks to
                     guests who are unfamiliar with their surroundings and proper evacuation procedures. OSE
                     takes action when buildings are overcrowded or don't follow required safeguards such as
                     building and fire codes.
                   </li>
                   <li>
-                    <strong>Preserving Our Homes and Communities</strong> - Our work helps maintain diverse
-                    and livable neighborhoods. We engage with communities to promptly and appropriately
-                    address their concerns, root out harmful illegal industries, and keep neighborhoods safe
-                    and vibrant.
+                    <strong>Preserving Our Homes and Communities</strong><br />Our work helps maintain
+                    diverse and livable neighborhoods. We engage with communities to promptly and
+                    appropriately address their concerns, root out harmful illegal industries, and keep
+                    neighborhoods safe and vibrant.
                   </li>
                   <li>
-                    <strong>Preventing Consumer Deception</strong> - Illegal businesses target tourists and
-                    other consumers using tactics such as bait-and-switch or offering misleading
+                    <strong>Preventing Consumer Deception</strong><br />Illegal businesses target tourists
+                    and other consumers using tactics such as bait-and-switch or offering misleading
                     information. OSE works to ensure that consumers booking short-term rentals receive goods
                     and services without being misled.
                   </li>
