--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -198,7 +198,11 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
+                          <li>
+                            <a href="../illegal-short-term-rentals/quiz.html"
+                              >Quiz: Is Your Rental Legal?</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -426,9 +430,9 @@
                 <div class="accordion-group my-4" role="tablist" id="accordion-01">
                   <h3>Hosts:</h3>
                   <p>
-                    If you use your home as an illegal short-term rental, you may be breaking the laws that
-                    protect New Yorkers and visitors to NYC. Are you violating short-term rental
-                    restrictions and in jeopardy of receiving a fine or legal action from your landlord?
+                    If you use your home as a short-term rental, you may be breaking the laws that protect
+                    New Yorkers and visitors to NYC. Are you violating short-term rental restrictions? Are
+                    you putting yourself in jeopardy of receiving a fine or legal action from your landlord?
                   </p>
                   <div class="card">
                     <a
@@ -459,7 +463,7 @@
                           <li>You must be present during your guests' stay.</li>
                           <li>
                             You may have up to two paying guests staying in your household, only if every
-                            guest has free and unobstructed access to every room, and each exit within the
+                            guest has free and unobstructed access to every room and each exit within the
                             apartment.
                           </li>
                           <li>
@@ -479,8 +483,8 @@
                             their properties are maintained in a safe and code-compliant manner.
                           </li>
                           <li>
-                            Property owners can and will be issued the violation for any illegal short-term
-                            rentals at their property -- even if it is conducted by tenants.
+                            Property owners can and will be issued a violation for any illegal short-term
+                            rentals at their property — even if it is conducted by tenants.
                           </li>
                           <li>
                             New York State law also prohibits the advertising of an apartment in a Class A
@@ -530,14 +534,14 @@
                           <li>
                             Visitors who book short-term rentals in New York City are not held responsible
                             for a rental that turns out to be illegal. If inspectors arrive at your rental
-                            location while you are there, we ask you cooperate with their investigation.
+                            location while you are there, we ask that you cooperate with their investigation.
                             After checking for their identification, please provide information that can aid
                             in our investigation.
                           </li>
                           <li>
                             In the event conditions are deemed to be hazardous or unsafe, visitors will need
                             to comply with emergency orders from inspectors, even if that means vacating the
-                            premises
+                            premises.
                           </li>
                         </ul>
                       </div>
@@ -592,8 +596,8 @@
                             installed on doors and doorknobs.
                           </li>
                           <li>
-                            Visitors congregating in hallways, lobbies, stairways and elevators, talking
-                            about their stays and consulting phones, maps or printed-out instructions, or
+                            Visitors congregating in hallways, lobbies, stairways, and elevators, talking
+                            about their stays and consulting phones, maps, or printed-out instructions, or
                             mentioning online rental booking websites by name.
                           </li>
                           <li>
@@ -615,7 +619,7 @@
                 </div>
                 <h3>Learn About the Laws and Fines</h3>
                 <p>
-                  For more information, read the following restrictions, outlined in the
+                  For more information, read the following restrictions outlined in the
                   <a href="#">NYS Multiple Dwelling Law</a>, the <a href="#">NYC Administrative Code</a>,
                   and the <a href="#">New York City Zoning Resolution</a>.
                 </p>
