--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
                           <li>
                             <a href="./illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="./illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
+                          <li>
+                            <a href="./illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a>
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -346,16 +348,20 @@
       <section class="featured-panel device-lg" dir="ltr">
         <div class="card bg-primary">
           <div class="photo">
-            <img class="card-img" src="./images/ose_web_home@3x.png" alt="NYC Office of Special Enforcement : Stay in the Know" />
+            <img
+              class="card-img"
+              src="./images/ose_web_home_2@3x.png"
+              alt="NYC Office of Special Enforcement : Stay in the Know"
+            />
           </div>
 
           <div class="card-img-overlay d-flex">
             <div class="container align-self-center my-3">
               <div class="medium text-white text-center">
                 <h1 class="card-title display-4 font-weight-bold mb-3">
-                  Lorem ipsum dolor sit amet consectetur.
+                  Stay in the Know: Prevent Illegal Short-term Rentals
                 </h1>
-                <a href="#" class="button">Button Link</a>
+                <a href="#" class="button">Learn More</a>
               </div>
             </div>
           </div>
@@ -367,23 +373,23 @@
 
       <section class="py-5">
         <div class="container">
-          <h2>Office of Special Enforcement lorem ipsum comet dolor</h2>
+          <h2>Office of Special Enforcement: How We Help</h2>
 
           <div class="row my-3">
             <div class="col-md mb-2 mb-md-0">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+                Unregulated and illegal industries can harm New Yorkers and the communities we live in. The
+                complex problems they cause need innovative solutions. Enter The Mayor’s Office of Special
+                Enforcement (OSE).
               </p>
             </div>
             <!-- .col -->
 
             <div class="col-md">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+                Our multi-agency enforcement team presents a strategic approach to protecting New Yorkers
+                from potential harm caused by malicious business practices. Through research, public
+                education, and on-the-street law enforcement we help keep all New Yorkers safe.
               </p>
             </div>
             <!-- .col -->
@@ -404,15 +410,18 @@
             <div class="col-md">
               <div class="card h-100">
                 <div class="card-body">
-                  <h2 class="card-title">Is your short-term rental illegal?</h2>
+                  <h2 class="card-title">Is your rental legal?</h2>
                   <p class="card-text">
-                    Mus malesuada dapibus ac condimentum habitasse a praesent commodo penatibus.
+                    Take a short quiz to understand the legality of your short-term rental.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="./illegal-short-term-rentals/quiz.html">
+                  <a
+                    class="btn btn-lg btn-block has-icon disperse stretched-link"
+                    href="./illegal-short-term-rentals/quiz.html"
+                  >
                     <span class="fas fa-angle-right" role="img"></span>
-                    <span class="title">Take the Quiz</span>
+                    <span class="title">Take the quiz</span>
                   </a>
                 </div>
               </div>
@@ -422,15 +431,18 @@
             <div class="col-md">
               <div class="card h-100">
                 <div class="card-body">
-                  <h2 class="card-title">Submit a Complaint</h2>
+                  <h2 class="card-title">Submit a complaint</h2>
                   <p class="card-text">
-                    Mus malesuada dapibus ac condimentum habitasse a praesent commodo penatibus.
+                    Report illegal activity in your neighborhood so that we can get you the help you need.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="./contact/submit-a-complaint.html">
+                  <a
+                    class="btn btn-lg btn-block has-icon disperse stretched-link"
+                    href="./contact/submit-a-complaint.html"
+                  >
                     <span class="fas fa-angle-right" role="img"></span>
-                    <span class="title">Submit a Complaint</span>
+                    <span class="title">Submit a complaint</span>
                   </a>
                 </div>
               </div>
@@ -440,15 +452,26 @@
             <div class="col-md">
               <div class="card h-100">
                 <div class="card-body">
-                  <h2 class="card-title">Card Title</h2>
+                  <h2 class="card-title">Learn about the laws</h2>
                   <p class="card-text">
-                    Mus malesuada dapibus ac condimentum habitasse a praesent commodo penatibus.
+                    Read a summary of laws outlined in the
+                    <a href="https://www1.nyc.gov/assets/buildings/pdf/MultipleDwellingLaw.pdf"
+                      >NYS Multiple Dwelling Law</a
+                    >, the
+                    <a
+                      href="http://library.amlegal.com/nxt/gateway.dll/New York/admin/newyorkcityadministrativecode?f=templates$fn=default.htm$3.0$vid=amlegal:newyork_ny"
+                      class="exitlink"
+                      >NYC Administrative Code</a
+                    >, and the
+                    <a href="https://www1.nyc.gov/site/planning/zoning/access-text.page"
+                      >NYC Zoning Resolution</a
+                    >.
                   </p>
                 </div>
                 <div class="card-footer">
                   <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="#">
                     <span class="fas fa-angle-right" role="img"></span>
-                    <span class="title">Button Link</span>
+                    <span class="title">Learn about the laws</span>
                   </a>
                 </div>
               </div>
