--- a/laws-and-fines/illegal-short-term-rentals.html
+++ b/laws-and-fines/illegal-short-term-rentals.html
@@ -401,7 +401,9 @@
                     <div class="subhead">
                       First Offense
                     </div>
-                    <div class="amount">$2,500–$5,000<span class="cap-symb">*</span><span class="cap-symb">†</span></div>
+                    <div class="amount">
+                      $2,500–$5,000<span class="cap-symb">*</span><span class="cap-symb">†</span>
+                    </div>
                   </div>
                   <div class="t-cell">
                     <div class="subhead">Subsequent Offense <span>1 or 2 Family House</span></div>
@@ -489,11 +491,12 @@
                 <!-- /.t-row -->
                 <div class="t-row caption">
                   <span>
-                    <span class="cap-symb">*</span> Additional assessment of daily penalties of $1,000/day up to $45,000 until condition
-                    is corrected.
+                    <span class="cap-symb">*</span> Additional assessment of daily penalties of $1,000/day
+                    up to $45,000 until condition is corrected.
                   </span>
                   <span>
-                    <span class="cap-symb">†</span> Violations for multiple units can carry additional penalties on the first offense.
+                    <span class="cap-symb">†</span> Violations for multiple units can carry additional
+                    penalties on the first offense.
                   </span>
                 </div>
               </div>
@@ -501,13 +504,13 @@
                 <p>
                   The Mayor's Office of Special Enforcement relies on a wide array of laws and regulations
                   to carry out its mission of supporting livable communities across New York City. Our
-                  inspection teams - comprised of staff members from the New York City
+                  inspection teams — comprising staff members from the New York City
                   <a href="https://www1.nyc.gov/buildings">Department of Buildings</a>, the
                   <a href="https://www1.nyc.gov/fdny">New York City Fire Department</a>, the
                   <a href="https://www1.nyc.gov/site/finance/sheriff-courts/sheriff.page"
                     >New York City Finance Department's Sheriff's Office</a
                   >
-                  and the <a href="https://www1.nyc.gov/nypd">New York City Police Department</a> - work in
+                  and the <a href="https://www1.nyc.gov/nypd">New York City Police Department</a> — work in
                   tandem with legal and research teams staffed by the Law Department and the Office of
                   Special Enforcement. Together, these partner agencies enforce a wide array of laws and
                   regulations, including:
