--- a/laws-and-fines/resolve-a-violation.html
+++ b/laws-and-fines/resolve-a-violation.html
@@ -377,7 +377,7 @@
               <div class="narrow my-4">
                 <h2>How to Resolve a Violation</h2>
                   <p>The City issues summonses to property owners that are settled at the
-                  <a href="/site/oath/hearings/hearings.page"
+                  <a href="https://www1.nyc.gov/site/oath/hearings/hearings.page"
                     >Office of Administrative Trials and Hearings (OATH)</a
                   >. These are commonly referred to as Environmental Control Board violations. Read any
                   summons you receive carefully, and/or consult with your lawyer or another professional
@@ -407,11 +407,11 @@
                   possible legal remedies like a court-ordered injunction against the activity. Do not evict
                   the tenant through a self-imposed method, such as locking them out of their apartment.
                   For more information about resolving a Summons, visit the
-                  <a href="/site/buildings/business/resolving-violations.page">Department of Buildings</a>
+                  <a href="https://www1.nyc.gov/site/buildings/business/resolving-violations.page">Department of Buildings</a>
                   and the
-                  <a href="/site/fdny/business/violations/violations.page">Fire Department of New York</a>
+                  <a href="https://www1.nyc.gov/site/fdny/business/violations/violations.page">Fire Department of New York</a>
                   websites. The Department of Buildings also hosts weekly
-                  <a href="/site/buildings/homeowner/homeowner.page">Homeowners' Night</a> informational
+                  <a href="https://www1.nyc.gov/site/buildings/homeowner/homeowner.page">Homeowners' Night</a> informational
                   sessions for residents to meet with Department representatives. 
                   
                   <h3>Lifting a Stop Work Order</h3>
@@ -455,12 +455,12 @@
                     
                     <li>
                       Proof that all outstanding DOB administrative penalties have been paid (if
-                      applicable);
+                      applicable).
                     </li>
                   </ol>
                   Lastly, Certificates of Correction for Summonses issued by OSE must be filed and accepted
                   at the
-                  <a href="/site/buildings/about/agency-units.page#aeu"
+                  <a href="https://www1.nyc.gov/site/buildings/about/agency-units.page#aeu"
                     >DOB Administrative Enforcement Unit</a
                   >. 
 
@@ -478,7 +478,7 @@
                   Fax: 212-788-6834
                   Certificates of Correction for the summonses that are
                   issued in conjunction with the Vacate Order must be filed and accepted at the
-                  <a href="/site/buildings/about/agency-units.page#aeu"
+                  <a href="https://www1.nyc.gov/site/buildings/about/agency-units.page#aeu"
                     >DOB Administrative Enforcement Unit</a
                   >. If work that requires a permit needs to be done to correct the violating conditions in
                   conjunction with the Vacate Order, please submit copies of approved DOB plans and permits
