--- a/index.html
+++ b/index.html
@@ -454,18 +454,10 @@
                 <div class="card-body">
                   <h2 class="card-title">Learn about the laws</h2>
                   <p class="card-text">
-                    Read a summary of laws outlined in the
-                    <a href="https://www1.nyc.gov/assets/buildings/pdf/MultipleDwellingLaw.pdf"
-                      >NYS Multiple Dwelling Law</a
-                    >, the
-                    <a
-                      href="http://library.amlegal.com/nxt/gateway.dll/New York/admin/newyorkcityadministrativecode?f=templates$fn=default.htm$3.0$vid=amlegal:newyork_ny"
-                      class="exitlink"
-                      >NYC Administrative Code</a
-                    >, and the
-                    <a href="https://www1.nyc.gov/site/planning/zoning/access-text.page"
-                      >NYC Zoning Resolution</a
-                    >.
+                    Read a summary of laws outlined in the <strong>NYS Multiple Dwelling Law</strong>, the <strong>
+                      NYC Administrative
+                      Code
+                    </strong>, and the <strong>NYC Zoning Resolution</strong>.
                   </p>
                 </div>
                 <div class="card-footer">
