fix chrome font issue, update homepage hero

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -274,7 +274,7 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="../contact/contact.html">Contact OSE</a></li>
-                          <li><a href="../contact/submit-a-complaint.html">Submit a Complaint</a></li>
+                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
                         </ul>
                       </div>
                     </div>
@@ -421,7 +421,7 @@
                 <h6>osepress@cityhall.nyc.gov</h6>
                 <p>
                   To register a complaint about a suspected illegal short-term rental, call 311 or
-                  <a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317"
+                  <a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
                     >submit a complaint online</a
                   >. For information on how to resolve a summons,
                   <a href="/site/specialenforcement/enforcement/how-to-resolve-a-violation.page"
