--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -279,7 +279,7 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="../contact/contact.html">Contact OSE</a></li>
-                          <li><a href="../contact/submit-a-complaint.html">Submit a Complaint</a></li>
+                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
                         </ul>
                       </div>
                     </div>
@@ -611,7 +611,7 @@
                   <!-- .card -->
                   <a
                     class="btn btn-lg btn-outline-primary has-icon"
-                    href="../contact/submit-a-complaint.html"
+                    href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
                   >
                     <span class="fas fa-angle-right" role="img"></span>
                     <span class="title">Submit a Complaint</span>
