--- a/about/leadership.html
+++ b/about/leadership.html
@@ -274,7 +274,7 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="../contact/contact.html">Contact OSE</a></li>
-                          <li><a href="../contact/submit-a-complaint.html">Submit a Complaint</a></li>
+                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
                         </ul>
                       </div>
                     </div>
