--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="./contact/contact.html">Contact OSE</a></li>
-                          <li><a href="./contact/submit-a-complaint.html">Submit a Complaint</a></li>
+                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
                         </ul>
                       </div>
                     </div>
@@ -348,11 +348,11 @@
       <section class="featured-panel device-lg" dir="ltr">
         <div class="card bg-primary">
           <div class="photo">
-            <img
+            <!-- <img
               class="card-img"
               src="./images/ose_web_home_2@3x.png"
               alt="NYC Office of Special Enforcement : Stay in the Know"
-            />
+            /> -->
           </div>
 
           <div class="card-img-overlay d-flex">
@@ -361,7 +361,7 @@
                 <h1 class="card-title display-4 font-weight-bold mb-3">
                   Stay in the Know: Prevent Illegal Short-term Rentals
                 </h1>
-                <a href="#" class="button">Learn More</a>
+                <a href="/illegal-short-term-rentals/" class="button">Learn More</a>
               </div>
             </div>
           </div>
@@ -439,7 +439,7 @@
                 <div class="card-footer">
                   <a
                     class="btn btn-lg btn-block has-icon disperse stretched-link"
-                    href="./contact/submit-a-complaint.html"
+                    href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
                   >
                     <span class="fas fa-angle-right" role="img"></span>
                     <span class="title">Submit a complaint</span>
@@ -461,7 +461,7 @@
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="#">
+                  <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="/laws-and-fines/illegal-short-term-rentals.html">
                     <span class="fas fa-angle-right" role="img"></span>
                     <span class="title">Learn about the laws</span>
                   </a>
