quiz language fix

--- a/illegal-short-term-rentals/quiz.html
+++ b/illegal-short-term-rentals/quiz.html
@@ -198,7 +198,11 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
+                          <li>
+                            <a href="../illegal-short-term-rentals/quiz.html"
+                              >Quiz: Is Your Rental Legal?</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -275,7 +279,11 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="../contact/contact.html">Contact OSE</a></li>
-                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
+                          <li>
+                            <a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
+                              >Submit a Complaint</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -530,15 +538,23 @@
 
                   <div id="results">
                     <div id="host-results" class="result">
-                      <div class="headline">Your rental <span class="legality"></span>.</div>
+                      <div class="headline">
+                        Your rental
+                        <span class="legality">
+                          <span class="probably">is probably</span>
+                          <span class="maybe">might be</span>
+                          <span class="l">legal</span>
+                          <span class="i">illegal</span>.
+                        </span>
+                      </div>
                       <div class="gt30-description">
                         <p>
                           Stays of longer than 30 days aren’t considered short-term rentals. Your proposed
                           rental activity is legal, so long as you stay for more than 30 days.
                         </p>
                         <p>
-                          If you are considering stays of fewer than 30 days, retake the quiz to find out
-                          if your stay is legal.
+                          If you are considering stays of fewer than 30 days, retake the quiz to find out if
+                          your stay is legal.
                         </p>
                       </div>
                       <div class="details">
@@ -569,15 +585,23 @@
                     </div>
 
                     <div id="traveler-results" class="result">
-                      <div class="headline">Your stay <span class="legality"></span>.</div>
+                      <div class="headline">
+                        Your stay
+                        <span class="legality">
+                          <span class="probably">is probably</span>
+                          <span class="maybe">might be</span>
+                          <span class="l">legal</span>
+                          <span class="i">illegal</span>.
+                        </span>
+                      </div>
                       <div class="gt30-description">
                         <p>
                           Stays of longer than 30 days aren’t considered short-term rentals. Your proposed
                           rental activity is legal, so long as you stay for more than 30 days.
                         </p>
                         <p>
-                          If you are considering stays of fewer than 30 days, retake the quiz to find out
-                          if your stay is legal.
+                          If you are considering stays of fewer than 30 days, retake the quiz to find out if
+                          your stay is legal.
                         </p>
                       </div>
                       <div class="details">
@@ -593,8 +617,8 @@
                               occupant safety are all part of city and state laws that protect you and the
                               people of NYC.
                               <div class="if-unknown">
-                                To ensure the legality of your stay, contact your host to conﬁrm they will be
-                                actively living in the dwelling during the rental period.
+                                To ensure the legality of your stay, contact your host to conﬁrm they will
+                                be actively living in the dwelling during the rental period.
                               </div>
                             </div>
                           </li>
