update host quiz language

--- a/illegal-short-term-rentals/quiz.html
+++ b/illegal-short-term-rentals/quiz.html
@@ -549,17 +549,17 @@
                       </div>
                       <div class="gt30-description">
                         <p>
-                          Stays of longer than 30 days aren’t considered short-term rentals. Your proposed
-                          rental activity is legal, so long as you stay for more than 30 days.
+                          Rentals of longer than 30 days aren’t considered short-term rentals. Your proposed
+                          rental activity is legal, so long as you are renting for more than 30 days.
                         </p>
                         <p>
-                          If you are considering stays of fewer than 30 days, retake the quiz to find out if
-                          your stay is legal.
+                          If you are considering rentals of fewer than 30 days, retake the quiz to find out if
+                          your rental is legal.
                         </p>
                       </div>
                       <div class="details">
                         <div class="description">
-                          In New York City, if you are staying for fewer than 30 days:
+                          In New York City, if you are renting for fewer than 30 days:
                         </div>
                         <ul>
                           <li result-type="home">
